--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <footer>
         <p>
             2024 - Vagas Dev. Todos os direitos reservados - 
-            Entre em contato pelo email: lucas@teste.com
+            Entre em contato pelo email: lucascolombobossoni@gmail.com
         </p>
     </footer>
     <script src="dados.js"></script>
